0023852: OSD_Path interprets unc paths incorrectly

checking for unc path on Windows was added
change deprecated macro WNT to _WIN32
Adding test case for this fix